test/1.4/errors/T_ENAMECOLL.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR ENAMECOLL
extern int x;
/// ERROR ENAMECOLL
bank x;

bank b2 {
    /// ERROR ENAMECOLL
    register r1 size 1 @ 0 {}
    register r2 size 1 @ 4 {
        /// ERROR ENAMECOLL
        param name = "r1";
    }
    register r3 size 1 @ 8 {
        /// ERROR ENAMECOLL
        param name = "r_collision";
    }
    register r4 size 1 @ 12 {
        /// ERROR ENAMECOLL
        param name = "r_collision";
    }
}

typedef layout "big-endian" {
    /// ERROR ENAMECOLL
    uint32 i;
    /// ERROR ENAMECOLL
    uint32 i;
} strange_layout;

method m1() { }
method m2() { }

/// ERROR ENAMECOLL
export m1 as "m_dup";
/// ERROR ENAMECOLL
export m2 as "m_dup";

method init() {
    local layout "little-endian" {
        /// ERROR ENAMECOLL
        uint32 a;
        /// ERROR ENAMECOLL
        uint32 a;
    } x;
    x.a = 4;

    local bitfields 32 {
        /// ERROR ENAMECOLL
        uint16 a @ [15:0];
        /// ERROR ENAMECOLL
        uint16 a @ [31:16];
    } y;
    y.a = 4;
}
